--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Get Icon
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1,width=device-width,user-scalable=no">
 	<link rel="icon" type="image/png" href="icon.png">
 
-	<link href="adam.css" media="screen" rel="stylesheet" type="text/css"/>
+	<link href="main.css" media="screen" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
