--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@ Get Icon
 			<section>
 			<p class="p2">Curriculum Vitae</p>
 				<h2>Introduction</h2>
-				<p>For the past 3 years,I have been studying Computing in CIT, the course covers a wide variety of subjects with an emphasis on java programming of which by the end of my third year I will have covered 8 modules worth, including a module in android app development. Other languages covered in the course are HTML, CSS and Java-script. I also have a small amount of experience with C from my time attending the Munster programming training program when I was in secondary school.
+				<p>
+				For the past 3 years,I have been studying Computing in CIT, the course covers a wide variety of subjects with an emphasis on java programming of which by the end of my third year I will have covered 8 modules worth, including a module in android app development. Other languages covered in the course are HTML, CSS and Java-script. I also have a small amount of experience with C from my time attending the Munster programming training program when I was in secondary school.
+				</p>
 
+				<p>
 				Along with programming the course focuses on topics like Networking and Systems Administration, the various networking modules were all based off of Cisco’s courses, and Systems Administration courses were on Linux systems. Other modules covered include Web Development, Database Development, IT management and Requirements engineering. In my spare time, I am also developing a professional résumé website.
-
-				While my course is only 3 years long, once I graduate, I do intend to proceed onto the add on fourth year, which is the fourth year of Software development, to obtain an Honors Bachelor degree.
 				</p>
 			</section>
 			<hr>
@@ -66,10 +67,15 @@ Get Icon
 					<img src="logos/cit.jpg" width="248" height="232">
 					</br>
 					<div class="p1">Cork Institute of Technology 2013-2018 </div>
+					<p>	Computing (BSc Degree) 2013-2017 </p>
 					<p>
 						For the past 3 years I have been studying Computer Science in CIT, the course covers a wide variety of subjects with an emphasis on programming of which by the end of my third year I will have covered 8 modules worth of java programming, including a module in android app development. I also have experience with HTML and JavaScript
 
 						Along with programming the course covers subjects such as Networking, Web Development, Systems Administration(Linux), Databases, IT management and Requirements engineering. As far as working with Linux is concerned my course has several modules on the subject and I have been using Linux myself for the past few years. 
+					</p>
+					<p>	Software Development (BSc honours) 2017-2018</p>
+					<p>
+						Once I graduate from Computing at the end of this year, I do intend to proceed onto the add on fourth year, which is the fourth year of Software development, to obtain an Honors Bachelor degree.
 					</p>
 					<div class="container">
 						 <div class="row">
