--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@ Get Icon
 <head>
 	<meta charset="UTF -8">
 	<title>Adam Manley Kelly | Adam Manley Kelly</title>
-
+	<meta name="description" content="Personal Resume Website">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1,width=device-width,user-scalable=no">
+	<meta name="author" content="Adam Manley Kelly" />
 	<link rel="icon" type="image/png" href="logos/icon.png">
 
 	<link href="main.css" media="screen" rel="stylesheet" type="text/css"/>
@@ -21,7 +22,8 @@ Get Icon
 
 <body>
     <header id="top">
-		<div class="head">
+    <div id="particles-js"></div>
+		<div class="title1">
 			<h1>Adam Manley Kelly</h1>
 			<h1>Student of Computer Science</h1>
 			<h2>A work in progress...</h2>
@@ -114,7 +116,7 @@ Get Icon
 					</br>
 					<div class="p1">UCC Munster programming Training (MPT) 2012</div>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu urna non dui volutpat semper. Fusce enim ex, gravida nec ante pulvinar, sagittis suscipit dolor. Donec vel placerat enim. Aenean blandit elementum massa in tincidunt. Nam turpis quam, porta nec pellentesque tempor, pharetra et nulla. Nam vulputate ex nec egestas ullamcorper. Vestibulum ac mauris dolor. Praesent efficitur orci nibh, in mollis diam maximus a. Aliquam sodales, tortor in interdum interdum, arcu nulla vehicula nisi, a ultricies nibh nulla ut nisl. Nulla sit amet tempor mi. Nunc vulputate bibendum urna, a dictum purus viverra at. Nunc non odio sit amet lectus semper commodo. Etiam at aliquet dui. Praesent vel ultrices massa. Suspendisse iaculis turpis metus, eget auctor odio feugiat eget.
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu urna non dui volutpat semper. Fusce enim ex, gravida nec ante pulvinar, sagittis suscipit dolor. Donec vel placerat enim. Aenean blandit elementum massa in tincidunt. Nam turpis quam, porta nec pellentesque tempor, pharetra et nulla. Nam vulputate ex nec egestas ullamcorper. Vestibulum ac mauris dolor. Praesent efficitur orci nibh, in mollis diam maximus a. Aliquam sodales, tortor in interdum interdum, arcu nulla vehicula nisi, a ultricies nibh nulla ut nisl. Nulla sit amet tempor mi. Nunc vulputate bibendum urna, a dictum purus viverra at. Nunc non odio sit amet lectus semper commodo. Etiam at aliquet dui. Praesent vel ultrices massa. Suspendisse iaculis turghjkpis metus, eget auctor odio feugiat eget.
 
 						Aenean commodo pretium metus sit amet placerat. Morbi quis porttitor nulla, semper mollis ante. Proin luctus eget velit id malesuada. Donec semper venenatis nulla ac dignissim. Nam viverra vulputate sem sed venenatis. Nulla egestas, metus at tincidunt accumsan, sem ipsum molestie felis, quis ullamcorper nibh est id dolor. Sed sodales tortor quis blandit malesuada. Phasellus ex nunc, dignissim vitae nunc sed, condimentum malesuada elit.
 					<p>
