--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ Get Icon
 <body>
     <header id="top">
     <div id="particles-js"></div>
+	<!-- scripts -->
+	<script src="js/particles.min.js"></script>
+	<script src="js/app.js"></script>
 		<div class="title1">
 			<h1>Adam Manley Kelly</h1>
 			<h1>Student of Computer Science</h1>
@@ -36,7 +39,7 @@ Get Icon
 
 		<!--NavBar-->
 		<div id="mySidenav" class="sidenav" onmouseover="openNav()" onmouseout="closeNav()">
-		  
+	
 		  <a href="#intro1">Introduction</a>
 		  <a href="#Education">Education</a>
 		  <a href="#workExperience">Work Experience</a>
@@ -163,31 +166,31 @@ Get Icon
 			<section id ="Contact">
 				<h2>Contact Details</h2>
 				<div class="container">
-				<center>
-					 <div class="row">
-					    <div class="col-sm-3">
-					    	<center><a href="https://github.com/adammanleykelly"><img src="logos/github.png" width="75" height="75"></a>
-					    	<h4>Github</h4></center>
-						</div>
+					<center>
+						 <div class="row">
+						    <div class="col-sm-3">
+						    	<center><a href="https://github.com/adammanleykelly"><img src="logos/github.png" width="75" height="75"></a>
+						    	<h4>Github</h4></center>
+							</div>
 
-						<div class="col-sm-3">
-							<center><a href="https://www.linkedin.com/in/adammanleykelly"><img src="logos/linkedin.png" width="75" height="75"></a>
-							<h4>Linkedin</h4></center>
-						</div>
+							<div class="col-sm-3">
+								<center><a href="https://www.linkedin.com/in/adammanleykelly"><img src="logos/linkedin.png" width="75" height="75"></a>
+								<h4>Linkedin</h4></center>
+							</div>
 
-						<div class="col-sm-3">
-							<center><a href="mailto:adammanleykelly@gmail.com"><img src="logos/google.png" width="75" height="75"></a>
-							<h4>Gmail</h4></center>
+							<div class="col-sm-3">
+								<center><a href="mailto:adammanleykelly@gmail.com"><img src="logos/google.png" width="75" height="75"></a>
+								<h4>Gmail</h4></center>
+							</div>
 						</div>
-					</div>
-				</center>
+					</center>
+				</div>
 			</section>
 			<hr>
 		</article>
 	</main>
 
 	<center>
-		<a name="myAnchor" id="myAnchor"><strong>Where i want to go</strong></a>
 		<a href="#top"><img src="logos/up.png" width="42" height="42"></a>
 	</center>
 </body>
