--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="icon" type="image/png" href="logos/icon.png">
 	<link href="main.css" media="screen" rel="stylesheet" type="text/css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
  	<script type="text/javascript" src="//code.jquery.com/jquery-1.6.4.js"></script>
@@ -29,7 +30,7 @@
 		 	<br>
 		</div>
 		<!--Button-->
-		<span style="font-size:25px; position: fixed; left:0;cursor:pointer" onmouseover="openNav()">&#9776; Content</span>
+		<span style="font-size:25px; position: fixed;  color: black; left:0; cursor:pointer" onmouseover="openNav()">&#9776; Content</span>
 
 		<!--NavBar-->
 		<div id="mySidenav" class="sidenav" onmouseover="openNav()" onmouseout="closeNav()">
@@ -153,38 +154,27 @@
 			</section>
 			<hr>
 
-			<!--
-			<footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
-			  <a href="#"><i class="fa fa-facebook-official"></i></a>
-			  <a href="#"><i class="fa fa-pinterest-p"></i></a>
-			  <a href="#"><i class="fa fa-twitter"></i></a>
-			  <a href="#"><i class="fa fa-flickr"></i></a>
-			  <a href="#"><i class="fa fa-linkedin"></i></a>
-			  <p class="w3-medium">
-			  Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-			  </p>
-			</footer>-->
 			<section id ="Contact">
 				<h2>Contact Details</h2>
 				<div class="container">
-					<center>
+					
 						 <div class="row">
-						    <div class="col-sm-3">
+						    <div class="col-lg-4">
 						    	<center><a href="https://github.com/adammanleykelly"><img src="logos/github.png" width="75" height="75"></a>
 						    	<h4>Github</h4></center>
 							</div>
 
-							<div class="col-sm-3">
+							<div class="col-lg-4">
 								<center><a href="https://www.linkedin.com/in/adammanleykelly"><img src="logos/linkedin.png" width="75" height="75"></a>
 								<h4>Linkedin</h4></center>
 							</div>
 
-							<div class="col-sm-3">
+							<div class="col-lg-4">
 								<center><a href="mailto:adammanleykelly@gmail.com"><img src="logos/google.png" width="75" height="75"></a>
 								<h4>Gmail</h4></center>
 							</div>
 						</div>
-					</center>
+					
 				</div>
 			</section>
 			<hr>
