--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 	<link href="main.css" media="screen" rel="stylesheet" type="text/css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
  	<script type="text/javascript" src="//code.jquery.com/jquery-1.6.4.js"></script>
 </head>
 
@@ -26,7 +24,7 @@
 			<h1>Student of Computer Science</h1>
 			<h2>A work in progress...</h2>
 			<br>
-			<a href="#intro1"><img src="images/logos/down.png" width="42" height="42"></a>
+			<div class="arr"><a href="#intro1"><img src="images/logos/down.png" width="42" height="42"></a></div>
 		 	<br>
 		</div>
 		<!--Button-->
@@ -170,7 +168,7 @@
 			</section>
 			</br>
 			<hr>
-			
+
 			<section id ="Other">
 				<h2>Other</h2>
 				<img src="images/logos/red.jpg" width="399" height="243">
