--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="title1">
 			<h1>Adam Manley Kelly</h1>
 			<h1>Student of Computer Science</h1>
-			<h2>A work in progress...</h2>
+			<h2>under construction></h2>
 			<br>
 			<div class="arr"><a href="#intro1"><img src="images/logos/down.png" width="42" height="42"></a></div>
 		 	<br>
