--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="old/index.html">Old Site</a>
+                    </li>
                 </ul>
             </div>
         </div>
