--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     Along with programming the course focuses on topics like Networking and Systems Administration, the various networking modules were all based off of Cisco’s courses, and Systems Administration courses were on Linux systems. Other modules covered include Web Development, Database Development, IT management and Requirements engineering. In my spare time, I am also developing a professional résumé website.
                     </p>
                     <a href="#education" class="btn btn-circle page-scroll">
-                        <i class="fa fa-angle-double-down animated" ></i>
+                        <i class="fa fa-angle-double-down animated" style="font-size:48px;color:black;" ></i>
                     </a>
                 </div>
             </div>
@@ -257,56 +257,47 @@
         </div>
     </div>
 
-    <section id="contact">
+     <footer id="contact" >
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 offset-lg-2 text-center">
+                 <div class="col-lg-8 offset-lg-2 text-center">
                     <h2 class="section-heading">Contact</h2>
                 </div>
-                 <div class="col-lg-4 offset-lg-2 text-center">
-                    <a href="mailto:adammanleykelly@gmail.com"><i class="fa fa-google" style="font-size:48px;color:black;"></i></a>
-                    <p>Gmail</p>
+                <div class="col-md-4">
+                    <span class="copyright">Copyright &copy; Adam Manley Kelly 2017</span>
                 </div>
-                <div class="col-lg-4 offset-lg-2 ">
-                    <a href="https://www.linkedin.com/in/adammanleykelly"><i class="fa fa-linkedin" style="font-size:48px;color:black;"></i></a>
-                    <p>Linkedin</p>
+                <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <center><a href="https://github.com/adammanleykelly"><i class="fa fa-github" style="font-size:25px;color:black;"></i></a>
+                            <h4>Github</h4></center>
+                        </div>
+
+                        <div class="col-md-4">
+                            <center><a href="https://www.linkedin.com/in/adammanleykelly"><i class="fa fa-linkedin" style="font-size:25px;color:black;"></i></a>
+                            <h4>Linkedin</h4></center>
+                        </div>
+
+                        <div class="col-md-4">
+                            <center><a href="mailto:adammanleykelly@gmail.com"><i class="fa fa-google" style="font-size:25px; color:black;"></i></a>
+                            <h4>Gmail</h4></center>
+                        </div>
+                    </div>
                 </div>
-              
-                <!-- <div class="col-lg-4 offset-lg-2 text-center">
-                    <a href="https://github.com/adammanleykelly"><i class="fa fa-github" style="font-size:48px;color:black;"></i></a>
-                    <p>Github</p>
-                </div>-->
+                <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <center><a href="#">Privacy Policy</a>
+                        </div>
+
+                        <div class="col-md-6">
+                            <center><a href="#">Terms of Use</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
-    <!--
-     <footer id="contact">
-        <div class="container">
-            <div class="row">
-              <!-- Left hand most side 
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Jean-Alexandre Turban 2016</span>
-                </div>
-                <!-- In the middle, shows icons side by side with proper links 
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        <li> <a href="mailto:adammanleykelly@gmail.com"><i class="fa fa-google" style="font-size:48px;color:black;"></i></a>
-                        </li>
-                        <li><a href="https://www.linkedin.com/in/adammanleykelly"><i class="fa fa-linkedin" style="font-size:48px;color:black;"></i></a>
-                        </li>
-                        <li><a target="_blank" href="http://www.linkedin.com/pub/jean-alexandre-turban/87/8b4/833"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- On the right side, linkable mailto: 
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="mailto:jeanalex23@gmail.com">jeanalex23@gmail.com</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div> -->
+    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
