--- a/index.html
+++ b/index.html
@@ -269,29 +269,29 @@
                 <div class="col-md-4">
                     <div class="row">
                         <div class="col-md-4">
-                            <center><a href="https://github.com/adammanleykelly"><i class="fa fa-github" style="font-size:25px;color:black;"></i></a>
-                            <h4>Github</h4></center>
+                            <a href="https://github.com/adammanleykelly"><i class="fa fa-github" style="font-size:25px;color:black;"></i></a>
+                            <h6>Github</h6>
                         </div>
 
                         <div class="col-md-4">
-                            <center><a href="https://www.linkedin.com/in/adammanleykelly"><i class="fa fa-linkedin" style="font-size:25px;color:black;"></i></a>
-                            <h4>Linkedin</h4></center>
+                            <a href="https://www.linkedin.com/in/adammanleykelly"><i class="fa fa-linkedin" style="font-size:25px;color:black;"></i></a>
+                            <h6>Linkedin</h6>
                         </div>
 
                         <div class="col-md-4">
-                            <center><a href="mailto:adammanleykelly@gmail.com"><i class="fa fa-google" style="font-size:25px; color:black;"></i></a>
-                            <h4>Gmail</h4></center>
+                            <a href="mailto:adammanleykelly@gmail.com"><i class="fa fa-google" style="font-size:25px; color:black;"></i></a>
+                            <h6>Gmail</h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="row">
                         <div class="col-md-6">
-                            <center><a href="#">Privacy Policy</a>
+                            <a href="#">Privacy Policy</a>
                         </div>
 
                         <div class="col-md-6">
-                            <center><a href="#">Terms of Use</a>
+                            <a href="#">Terms of Use</a>
                         </div>
                     </div>
                 </div>
