--- a/index.html
+++ b/index.html
@@ -154,7 +154,148 @@
     </section>
 
     <section class="no-padding" id="technicalSkills">
-        <div class="container-fluid">
+        <div class="call-to-action bg-dark">
+            <div class="container text-center">
+                <h2 class="section-heading text-white">Technical Skills</h2>
+                <hr class="light">
+                <p class="text-faded">Integer volutpat ipsum eget faucibus blandit. Duis egestas sem nisl. Maecenas vulputate elit non lacinia malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse eu accumsan felis. Curabitur augue justo, blandit eget dui ut, finibus dapibus lorem. Nunc tempus fermentum nisl ut vestibulum. Morbi maximus vel eros sed dictum. Suspendisse malesuada leo non dapibus imperdiet. Proin diam nunc, commodo imperdiet venenatis at, cursus vitae augue. Aliquam velit mauris, elementum ac condimentum at, blandit elementum erat. Quisque vitae magna urna. Aenean auctor ultrices viverra.Integer volutpat ipsum eget faucibus blandit. Duis egestas sem nisl. Maecenas vulputate elit non lacinia malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse eu accumsan felis. Curabitur augue justo, blandit eget dui ut, finibus dapibus lorem. Nunc tempus fermentum nisl ut vestibulum. Morbi maximus vel eros sed dictum. Suspendisse malesuada leo non dapibus imperdiet. Proin diam nunc, commodo imperdiet venenatis at, cursus vitae augue. Aliquam velit mauris, elementum ac condimentum at, blandit elementum erat. Quisque vitae magna urna. Aenean auctor ultrices viverra.</p>
+
+                <a href="#experience" class="btn btn-circle page-scroll">
+                    <i class="fa fa-angle-double-down animated" style="font-size:48px;color:black;" ></i>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="no-padding" id="experience">
+            <div class="container text-center">
+                <br>
+                <h2 class="section-heading ">Experience</h2>
+                <hr class="primary">
+                <p class="text-muted">Integer volutpat ipsum eget faucibus blandit. Duis egestas sem nisl. Maecenas vulputate elit non lacinia malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse eu accumsan felis. Curabitur augue justo, blandit eget dui ut, finibus dapibus lorem. Nunc tempus fermentum nisl ut vestibulum. Morbi maximus vel eros sed dictum. Suspendisse malesuada leo non dapibus imperdiet. Proin diam nunc, commodo imperdiet venenatis at, cursus vitae augue. Aliquam velit mauris, elementum ac condimentum at, blandit elementum erat. Quisque vitae magna urna. Aenean auctor ultrices viverra.Integer volutpat ipsum eget faucibus blandit. Duis egestas sem nisl. Maecenas vulputate elit non lacinia malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse eu accumsan felis. Curabitur augue justo, blandit eget dui ut, finibus dapibus lorem. Nunc tempus fermentum nisl ut vestibulum. Morbi maximus vel eros sed dictum. Suspendisse malesuada leo non dapibus imperdiet. Proin diam nunc, commodo imperdiet venenatis at, cursus vitae augue. Aliquam velit mauris, elementum ac condimentum at, blandit elementum erat. Quisque vitae magna urna. Aenean auctor ultrices viverra.</p>
+
+                <a href="#education" class="btn btn-circle page-scroll">
+                    <i class="fa fa-angle-double-down animated" style="font-size:48px;color:black;" ></i>
+                </a>
+            </div>
+    </section>
+
+     <footer id="contact" >
+        <div class="container">
+            <div class="row">
+                 <div class="col-lg-8 offset-lg-2 text-center">
+                    <h2 class="section-heading">Contact</h2>
+                </div>
+                <div class="col-md-4">
+                    <center><span class="copyright">Copyright &copy; Adam Manley Kelly 2017</span></center>
+                </div>
+                <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <center><a href="https://github.com/adammanleykelly"><i class="fa fa-github" style="font-size:25px;color:black;"></i></a>
+                            <h6>Github</h6></center>
+                        </div>
+
+                        <div class="col-md-4">
+                            <center><a href="https://www.linkedin.com/in/adammanleykelly"><i class="fa fa-linkedin" style="font-size:25px;color:black;"></i></a>
+                            <h6>Linkedin</h6></center>
+                        </div>
+
+                        <div class="col-md-4">
+                            <center><a href="mailto:adammanleykelly@gmail.com"><i class="fa fa-google" style="font-size:25px; color:black;"></i></a>
+                            <h6>Gmail</h6></center>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <center><a href="#">Privacy Policy</a>
+                        </div>
+
+                        <div class="col-md-6">
+                            <center><a href="#">Terms of Use</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/tether/tether.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="js/creative.min.js"></script>
+
+
+    <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
+
+    <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left"><span class="fa fa-chevron-up fa-fw fa-1x"></span></a>
+
+
+</body>
+
+</html>
+
+<script>
+//#to-top button appears after scrolling
+
+$(document).ready(function(){
+     $(window).scroll(function () {
+            if ($(this).scrollTop() > 50) {
+                $('#back-to-top').fadeIn();
+            } else {
+                $('#back-to-top').fadeOut();
+            }
+        });
+        // scroll body to 0px on click
+        $('#back-to-top').click(function () {
+            $('#back-to-top').tooltip('hide');
+            $('body,html').animate({
+                scrollTop: 0
+            }, 800);
+            return false;
+        });
+        
+        $('#back-to-top').tooltip('show');
+
+});
+
+    var fixed = false;
+    $(document).scroll(function() {
+        if ($(this).scrollTop() > 250) {
+            if (!fixed) {
+                fixed = true;
+                // $('#to-top').css({position:'fixed', display:'block'});
+                $('#to-top').show("slow", function() {
+                    $('#to-top').css({
+                        position: 'fixed',
+                        display: 'block'
+                    });
+                });
+            }
+        } else {
+            if (fixed) {
+                fixed = false;
+                $('#to-top').hide("slow", function() {
+                    $('#to-top').css({
+                        display: 'none'
+                    });
+                });
+            }
+        }
+    });
+</script>
+
+<!--<div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="images/portfolio/fullsize/1.jpg">
@@ -247,71 +388,4 @@
                     </a>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <div class="call-to-action bg-dark">
-        <div class="container text-center">
-            <h2>Free Download at Start Bootstrap!</h2>
-            <a class="btn btn-default btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
-        </div>
-    </div>
-
-     <footer id="contact" >
-        <div class="container">
-            <div class="row">
-                 <div class="col-lg-8 offset-lg-2 text-center">
-                    <h2 class="section-heading">Contact</h2>
-                </div>
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Adam Manley Kelly 2017</span>
-                </div>
-                <div class="col-md-4">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <a href="https://github.com/adammanleykelly"><i class="fa fa-github" style="font-size:25px;color:black;"></i></a>
-                            <h6>Github</h6>
-                        </div>
-
-                        <div class="col-md-4">
-                            <a href="https://www.linkedin.com/in/adammanleykelly"><i class="fa fa-linkedin" style="font-size:25px;color:black;"></i></a>
-                            <h6>Linkedin</h6>
-                        </div>
-
-                        <div class="col-md-4">
-                            <a href="mailto:adammanleykelly@gmail.com"><i class="fa fa-google" style="font-size:25px; color:black;"></i></a>
-                            <h6>Gmail</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <a href="#">Privacy Policy</a>
-                        </div>
-
-                        <div class="col-md-6">
-                            <a href="#">Terms of Use</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/tether/tether.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/creative.min.js"></script>
-
-</body>
-
-</html>
+        </div>-->
