Added other section

--- a/index.html
+++ b/index.html
@@ -179,6 +179,27 @@
                 </a>
             </div>
     </section>
+    
+    <section class="bg-primary" id="other">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 offset-lg-2 text-center">
+                    <h2 class="section-heading text-white">Other</h2>
+                    <hr class="light">
+                    <p class="text-faded"> 
+                        orem ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate venenatis volutpat. Sed dignissim velit eu tempor pellentesque. Nunc luctus pretium diam vitae molestie. Sed dignissim placerat velit vel venenatis. Ut lobortis in ante vel tincidunt. Mauris egestas eget purus sed mollis. Vestibulum sed dui lacus. Fusce in nibh sit amet erat suscipit maximus sed et dolor. Suspendisse id lectus in nisl vulputate vehicula. Duis accumsan quam felis, sit amet pellentesque felis viverra eu. Praesent bibendum eros et ante lobortis, in venenatis velit fermentum. Pellentesque cursus, neque eu posuere luctus, urna nunc sodales ipsum, eu gr
+                    </p>
+
+                    <p class="text-faded">
+                        orem ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate venenatis volutpat. Sed dignissim velit eu tempor pellentesque. Nunc luctus pretium diam vitae molestie. Sed dignissim placerat velit vel venenatis. Ut lobortis in ante vel tincidunt. Mauris egestas eget purus sed mollis. Vestibulum sed dui lacus. Fusce in nibh sit amet erat suscipit maximus sed et dolor. Suspendisse id lectus in nisl vulputate vehicula. Duis accumsan quam felis, sit amet pellentesque felis viverra eu. Praesent bibendum eros et ante lobortis, in venenatis velit fermentum. Pellentesque cursus, neque eu posuere luctus, urna nunc sodales ipsum, eu gr
+                     </p>
+                    <a href="#education" class="btn btn-circle page-scroll">
+                        <i class="fa fa-angle-double-down animated" style="font-size:48px;color:black;" ></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 
      <footer id="contact" >
         <div class="container">
