--- a/index.html
+++ b/index.html
@@ -78,8 +78,13 @@
     </nav>
 
     <header class="masthead">
-        <div class="header-content">
+         <div id="particles-js"></div>
+        <!-- scripts -->
+        <script src="js/particles.min.js"></script>
+        <script src="js/app.js"></script><div class="header-content">
+           
             <div class="header-content-inner">
+
                 <h1 id="homeHeading">Adam Manley Kelly</h1>
                 <hr>
                 <p>Student of Computer Science</p>
