--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
     </nav>
 
     <header class="masthead">
-       
-            <div class="header-content">
-                <div class="header-content-inner">
+       <div class="header-content">
+            <div class="header-content-inner"> 
+                <div id="particles-js">
+                    <script src="js/particles.min.js"></script>
+                    <script src="js/app.js"></script>
                     <h1 id="homeHeading">Adam Manley Kelly</h1>
                     <hr>
                     <p>Student of Computer Science</p>
@@ -89,7 +91,7 @@
                     </a>
                 </div>
             </div>
-       
+        </div>
     </header>
 
     <section class="bg-primary" id="about">
