--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <script src="js/app.js"></script>
                     <h1 id="homeHeading">Adam Manley Kelly</h1>
                     <hr>
-                    <p><Under Construction></p>
+                    <p>Under Construction</p>
                     <p>Student of Computer Science</p>
                     <a href="#about" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated" style="font-size:48px;color:black;"></i>
