--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
         }
     }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113936667-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-113936667-1');
+        </script>
 
 </head>
 
