Color-scheme change

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
     </section>
 
     <section class="no-padding" id="experience">
+        <div class="call-to-action bg-white">
             <div class="container text-center">
                 <br>
                 <h2 class="section-heading ">Experience</h2>
@@ -177,6 +178,7 @@
                     <i class="fa fa-angle-double-down animated" style="font-size:48px;color:black;" ></i>
                 </a>
             </div>
+        </div>
     </section>
     
     <section class="bg-dark" id="other">
@@ -240,13 +242,13 @@
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-    <!-- Custom scripts for this template -->
+    <!-- Custom scripts for this template    <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a> -->
     <script src="js/creative.min.js"></script>
 
 
-    <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
 
-    <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left"><span class="fa fa-chevron-up fa-fw fa-1x"></span></a>
+
+    <a id="back-to-top" href="#" class="btn btn-grey btn-lg back-to-top"  role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left"><span class="fa fa-chevron-up fa-fw fa-1x" style="color:black;"></span></a>
 
 
 </body>
