--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="old/index.html">Old Site</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html">Blog</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -244,8 +247,6 @@
 
     <!-- Custom scripts for this template    <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a> -->
     <script src="js/creative.min.js"></script>
-
-
 
 
     <a id="back-to-top" href="#" class="btn btn-grey btn-lg back-to-top"  role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left"><span class="fa fa-chevron-up fa-fw fa-1x" style="color:black;"></span></a>
