--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Personal Resume Website">
+    <meta name="description" content="Blog">
     <meta name="author" content="Adam Manley Kelly" />
     <link rel="icon" type="image/png" href="images/logos/icon.png">
 
@@ -14,9 +14,9 @@
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.blog.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    <!-- Custom styles for this template<link href="css/creative.min.css" rel="stylesheet"> -->
     <link href="css/blog-home.css" rel="stylesheet">
-    <link href="css/creative.min.css" rel="stylesheet">
+    
 
     <!-- Temporary navbar container fix -->
     <style>
@@ -36,41 +36,31 @@
   <body id="page-top">
 
     <!-- Navigation -->
-      <nav class="navbar fixed-top navbar-toggleable-md navbar-light" id="mainNav">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Adam Manley Kelly</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="container">
-            <a class="navbar-brand" href="#page-top">Adam Manley Kelly</a>
-            <div class="collapse navbar-collapse" id="navbarExample">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#education">Education</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#technicalSkills">Technical Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#experience">Experience</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="#other">Other</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="old/index.html">Old Site</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog/index.html">Blog</a>
-                    </li>
-                </ul>
-            </div>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
     <!-- Page Content -->
@@ -205,7 +195,33 @@
 
     </div>
     <!-- /.container -->
+<section id="contact" >
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Contact</h2>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-3">
+                            <center><a href="https://github.com/adammanleykelly"><i class="fa fa-github" style="font-size:25px;color:black;"></i></a>
+                            <h6>Github</h6>
+                        </div>
 
+                        <div class="col-lg-4 col-md-3">
+                            <center><a href="mailto:adammanleykelly@gmail.com"><i class="fa fa-google" style="font-size:25px; color:black;"></i></a>
+                            <h6>Gmail</h6>
+                        </div>
+
+                        <div class="col-lg-4 col-md-3">
+                            <center><a href="https://www.linkedin.com/in/adammanleykelly"><i class="fa fa-linkedin" style="font-size:25px;color:black;"></i></a>
+                            <h6>Linkedin</h6>
+                        </div>   
+                    </div>
+                   </div> 
+            </div>
+        </div>
+    </section>
  <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
