--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                 <div class="col-lg-8 offset-lg-2 text-center">
                     <h2 class="section-heading text-white">About me</h2>
                     <hr class="light">
-                    <p class="text-faded">For the past 3 years,I have been studying Computing in CIT, the course covers a wide variety of subjects with an emphasis on java programming of which by the end of my third year I will have covered 8 modules worth, including a module in android app development. Other languages covered in the course are HTML, CSS and Java-script. I also have a small amount of experience with C from my time attending the Munster programming training program when I was in secondary school.
+                    <p class="text-faded">For the past 4 years,I have been studying Computer Science in CIT and in my own time, topics covered in my time there are the course covers a wide variety of subjects with an emphasis on java programming , python, scripting, HTML, CSS and Java-script. 
                     </p>
 
                     <p class="text-faded">
-                    Along with programming the course focuses on topics like Networking and Systems Administration, the various networking modules were all based off of Cisco’s courses, and Systems Administration courses were on Linux systems. Other modules covered include Web Development, Database Development, IT management and Requirements engineering. In my spare time, I am also developing a professional résumé website.
+                    Other topics covered in my time in college are Networking and Systems Administration, Web Development, Database Development, IT management, Penetration testin, security management, security monitoring and windows security. 
                     </p>
                     <a href="#education" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated" style="font-size:48px;color:black;" ></i>
@@ -160,7 +160,15 @@
             <div class="container text-center">
                 <h2 class="section-heading text-white">Technical Skills</h2>
                 <hr class="light">
-                <p class="text-faded">Integer volutpat ipsum eget faucibus blandit. Duis egestas sem nisl. Maecenas vulputate elit non lacinia malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse eu accumsan felis. Curabitur augue justo, blandit eget dui ut, finibus dapibus lorem. Nunc tempus fermentum nisl ut vestibulum. Morbi maximus vel eros sed dictum. Suspendisse malesuada leo non dapibus imperdiet. Proin diam nunc, commodo imperdiet venenatis at, cursus vitae augue. Aliquam velit mauris, elementum ac condimentum at, blandit elementum erat. Quisque vitae magna urna. Aenean auctor ultrices viverra.Integer volutpat ipsum eget faucibus blandit. Duis egestas sem nisl. Maecenas vulputate elit non lacinia malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse eu accumsan felis. Curabitur augue justo, blandit eget dui ut, finibus dapibus lorem. Nunc tempus fermentum nisl ut vestibulum. Morbi maximus vel eros sed dictum. Suspendisse malesuada leo non dapibus imperdiet. Proin diam nunc, commodo imperdiet venenatis at, cursus vitae augue. Aliquam velit mauris, elementum ac condimentum at, blandit elementum erat. Quisque vitae magna urna. Aenean auctor ultrices viverra.</p>
+                <p class="text-faded">
+                    <ul>Programming - Java, Python, C</ul>
+                    <ul>HTML, Javascript, </ul>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul>Im also pretty handy with Web Development </ul>
+                </p>
 
                 <a href="#experience" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated" style="font-size:48px;color:black;" ></i>
@@ -169,12 +177,12 @@
         </div>
     </section>
 
-    <section class="no-padding" id="experience">
-        <div class="call-to-action bg-white">
-            <div class="container text-center">
-                <br>
-                <h2 class="section-heading ">Experience</h2>
-                <hr class="primary">
+    <section id="experience">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Experience</h2>
+                    <hr class="primary">
                 <p class="text-muted">Integer volutpat ipsum eget faucibus blandit. Duis egestas sem nisl. Maecenas vulputate elit non lacinia malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse eu accumsan felis. Curabitur augue justo, blandit eget dui ut, finibus dapibus lorem. Nunc tempus fermentum nisl ut vestibulum. Morbi maximus vel eros sed dictum. Suspendisse malesuada leo non dapibus imperdiet. Proin diam nunc, commodo imperdiet venenatis at, cursus vitae augue. Aliquam velit mauris, elementum ac condimentum at, blandit elementum erat. Quisque vitae magna urna. Aenean auctor ultrices viverra.Integer volutpat ipsum eget faucibus blandit. Duis egestas sem nisl. Maecenas vulputate elit non lacinia malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse eu accumsan felis. Curabitur augue justo, blandit eget dui ut, finibus dapibus lorem. Nunc tempus fermentum nisl ut vestibulum. Morbi maximus vel eros sed dictum. Suspendisse malesuada leo non dapibus imperdiet. Proin diam nunc, commodo imperdiet venenatis at, cursus vitae augue. Aliquam velit mauris, elementum ac condimentum at, blandit elementum erat. Quisque vitae magna urna. Aenean auctor ultrices viverra.</p>
 
                 <a href="#education" class="btn btn-circle page-scroll">
