--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@
                     </div>
                 </div>
             </div>
+            
+        </div>
+        <div class="col-lg-12 text-center">
+        <a  href="#technicalSkills" class="btn btn-circle page-scroll">
+                <i class="fa fa-angle-double-down animated" style="font-size:48px;color:black;" ></i>
+            </a>
         </div>
     </section>
 
@@ -185,7 +191,7 @@
                     <hr class="primary">
                 <p class="text-muted">Integer volutpat ipsum eget faucibus blandit. Duis egestas sem nisl. Maecenas vulputate elit non lacinia malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse eu accumsan felis. Curabitur augue justo, blandit eget dui ut, finibus dapibus lorem. Nunc tempus fermentum nisl ut vestibulum. Morbi maximus vel eros sed dictum. Suspendisse malesuada leo non dapibus imperdiet. Proin diam nunc, commodo imperdiet venenatis at, cursus vitae augue. Aliquam velit mauris, elementum ac condimentum at, blandit elementum erat. Quisque vitae magna urna. Aenean auctor ultrices viverra.Integer volutpat ipsum eget faucibus blandit. Duis egestas sem nisl. Maecenas vulputate elit non lacinia malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse eu accumsan felis. Curabitur augue justo, blandit eget dui ut, finibus dapibus lorem. Nunc tempus fermentum nisl ut vestibulum. Morbi maximus vel eros sed dictum. Suspendisse malesuada leo non dapibus imperdiet. Proin diam nunc, commodo imperdiet venenatis at, cursus vitae augue. Aliquam velit mauris, elementum ac condimentum at, blandit elementum erat. Quisque vitae magna urna. Aenean auctor ultrices viverra.</p>
 
-                <a href="#education" class="btn btn-circle page-scroll">
+                <a href="#other" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated" style="font-size:48px;color:black;" ></i>
                 </a>
             </div>
@@ -205,7 +211,7 @@
                     <p class="text-faded">
                         orem ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate venenatis volutpat. Sed dignissim velit eu tempor pellentesque. Nunc luctus pretium diam vitae molestie. Sed dignissim placerat velit vel venenatis. Ut lobortis in ante vel tincidunt. Mauris egestas eget purus sed mollis. Vestibulum sed dui lacus. Fusce in nibh sit amet erat suscipit maximus sed et dolor. Suspendisse id lectus in nisl vulputate vehicula. Duis accumsan quam felis, sit amet pellentesque felis viverra eu. Praesent bibendum eros et ante lobortis, in venenatis velit fermentum. Pellentesque cursus, neque eu posuere luctus, urna nunc sodales ipsum, eu gr
                      </p>
-                    <a href="#education" class="btn btn-circle page-scroll">
+                    <a href="#contact" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated" style="font-size:48px;color:black;" ></i>
                     </a>
                 </div>
@@ -237,6 +243,7 @@
                         </div>   
                     </div>
                    </div> 
+
             </div>
         </div>
     </section>
