--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
 
     <header class="masthead">
         <div id="particles-js">
-        <script src="js/particles.min3.js"></script>
-        <script src="js/app.js"></script></div>
-       <div class="header-content">
-            <div class="header-content-inner"> 
+            <script src="js/particles.min3.js"></script>
+            <script src="js/app.js"></script>
+            <div class="header-content">
+                <div class="header-content-inner"> 
                     <h1 id="homeHeading">Adam Manley Kelly</h1>
                     <hr>
                     <p>Student of Computer Science</p>
                     <a href="#about" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated" style="font-size:48px;color:black;"></i>
                     </a>
-                
+                </div>    
             </div>
         </div>
     </header>
