Added dark/light mode toggle

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AMK</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css\style.css">
 </head>
    
@@ -19,10 +20,17 @@
                     <nav>
                         <ul>
                             <li><a href="https://www.linkedin.com/in/adammanleykelly/" target="_blank">LinkedIn</a></li>
-                            <li><a href="https://twitter.com/yourprofile" target="_blank">X.com</a></li>
+                            <li><a href="https://x.com/Tr1ckSec" target="_blank">X.com</a></li>
                             <li><a href="https://github.com/adammanleykelly" target="_blank">GitHub</a></li>
                             <li><a href="https://github.com/yourprofile" target="_blank">Projects</a></li>
                         </ul>
+                        <script src="js/theme-toggle.js"></script>
+                        <button id="theme-toggle" class="theme-toggle-btn">
+                            <i class="fas fa-sun" id="sun-icon"></i>
+                            <i class="fas fa-moon" id="moon-icon" style="display: none;"></i>
+                        </button>
+
+                        
                     </nav>
                 </div>    
             </div>
@@ -31,4 +39,5 @@
             <p>© 2024 Adam Manley Kelly</p>
         </footer>-->
     </header>
+
 </html>
