--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>AMK</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css\style.css">
+    <link rel="icon" type="image/png" href="images/logos/icon.png">
 </head>
    
     <header class="masthead">
@@ -16,13 +17,14 @@
                 <div class="header-content-inner"> 
                     <h1>Adam Manley Kelly</h1>
                     <hr>
-                    <p>CyberSecurity Professional</p>
+                    <p>Cybersecurity Professional</p>
                     <nav>
                         <ul>
                             <li><a href="https://www.linkedin.com/in/adammanleykelly/" target="_blank">LinkedIn</a></li>
-                            <li><a href="https://x.com/Tr1ckSec" target="_blank">X.com</a></li>
+                            <li><a href="https://www.credly.com/users/adam-manley-kelly" target="_blank">Credly</a></li>
                             <li><a href="https://github.com/adammanleykelly" target="_blank">GitHub</a></li>
                             <li><a href="https://github.com/yourprofile" target="_blank">Projects</a></li>
+                            <li><a href="https://x.com/Tr1ckSec" target="_blank">X.com</a></li>
                         </ul>
                         <script src="js/theme-toggle.js"></script>
                         <button id="theme-toggle" class="theme-toggle-btn">
