--- a/index.html
+++ b/index.html
@@ -10,30 +10,29 @@
 </head>
    
     <header class="masthead">
-        <div id="particles-js">
-            <script src="js/theme-toggle.js"></script>
-            <button id="theme-toggle" class="theme-toggle-btn">
-                <i class="fas fa-sun" id="sun-icon"></i>
-                <i class="fas fa-moon" id="moon-icon" style="display: none;"></i>
-            </button>
-            <script src="js/particles.js"></script>
-            <script src="js/app.js"></script>
-            <div class="header-content">
-                <div class="header-content-inner"> 
-                    <h1>Adam Manley Kelly</h1>
-                    <hr>
-                    <p>Cybersecurity Professional</p>
-                    <nav>
-                        <ul>
-                            <li><a href="https://www.linkedin.com/in/adammanleykelly/" target="_blank">LinkedIn</a></li>
-                            <li><a href="https://www.credly.com/users/adam-manley-kelly" target="_blank">Credly</a></li>
-                            <li><a href="https://github.com/adammanleykelly" target="_blank">GitHub</a></li>
-                            <li><a href="https://github.com/yourprofile" target="_blank">Projects</a></li>
-                            <li><a href="https://x.com/Tr1ckSec" target="_blank">X.com</a></li>
-                        </ul>
-                    </nav>
-                </div>    
-            </div>
+        <div id="particles-js"></div>
+        <script src="js/theme-toggle.js"></script>
+        <button id="theme-toggle" class="theme-toggle-btn">
+            <i class="fas fa-sun" id="sun-icon"></i>
+            <i class="fas fa-moon" id="moon-icon" style="display: none;"></i>
+        </button>
+        <script src="js/particles.js"></script>
+        <script src="js/app.js"></script>
+        <div class="header-content">
+            <div class="header-content-inner"> 
+                <h1>Adam Manley Kelly</h1>
+                <hr>
+                <p>Cybersecurity Professional</p>
+                <nav>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/adammanleykelly/" target="_blank">LinkedIn</a></li>
+                        <li><a href="https://www.credly.com/users/adam-manley-kelly" target="_blank">Credly</a></li>
+                        <li><a href="https://github.com/adammanleykelly" target="_blank">GitHub</a></li>
+                        <li><a href="https://github.com/yourprofile" target="_blank">Projects</a></li>
+                        <li><a href="https://x.com/Tr1ckSec" target="_blank">X.com</a></li>
+                    </ul>
+                </nav>
+            </div>    
         </div>
         <!-- <footer>
             <p>© 2024 Adam Manley Kelly</p>
