Added Resolver Project

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         <li><a href="https://www.credly.com/users/adam-manley-kelly" target="_blank">Credly</a></li>
                         <li><a href="https://github.com/adammanleykelly" target="_blank">GitHub</a></li>
                         <li><a href="https://github.com/yourprofile" target="_blank">Projects</a></li>
+                        <li><a href="pages/resolver4.html" target="_blank">Resolver</a></li>
                         <li><a href="https://x.com/Tr1ckSec" target="_blank">X.com</a></li>
                     </ul>
                 </nav>
